k8s/phm/nifi/p4/nifi-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-headless
  labels:
    app: nifi-headless
  namespace: nifi-namespace
spec:
  ports:
  - port: 8080
    name: web
    targetPort: web
  clusterIP: None
  selector:
    app: nifi
