k8s/phm/nifi/p4/nifi-services-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-headless
  labels:
    app: nifi-headless
  namespace: nifi-namespace
spec:
  selector:
    app: nifi
  ports:
  - port: 30000
    targetPort: 8080
    nodePort: 30000
    name: web
  type: NodePort
